--- a/CV/style.css
+++ b/CV/style.css
@@ -53,7 +53,7 @@ a {
   /* background-color: #1e1e1e; */
   color: #d4d4d4;
   padding: 1.5rem;
-  overflow-x: hidden;
+  overflow-x: auto;
   font-family: "Consolas", monospace;
   font-size: 0.95rem;
   line-height: 1.6;
